--- a/Destapa-Cañerias/Destapaciones-Precios.html
+++ b/Destapa-Cañerias/Destapaciones-Precios.html
@@ -142,7 +142,7 @@ Destapaciones Precios
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Harpic-destapacaños-instrucciones.html">Harpic destapacaños instrucciones </a> 
+       <a href="../Destapa-Cañerias/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
@@ -152,17 +152,17 @@ Destapaciones Precios
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cañeria.html">Destapaciones De Cañeria </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Guia-destapacaños-pretul.html">Guia destapacaños pretul </a> 
+       <a href="../Servicios/Que-son-los-mapas-estelares.html">Que son los mapas estelares </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacaños-truper-home-depot.html">Destapacaños truper home depot </a> 
+       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
          </li>
 <!--EndPostsList-->
 
@@ -225,57 +225,57 @@ Destapaciones Precios
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquina.html">Destapaciones Con Maquina </a> 
+       <a href="../Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html">Liquido para destapar tuberias de agua potable </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-cañerias-de-aguas-negras.html">Como destapar cañerias de aguas negras </a> 
+       <a href="../Destapa-Cañerias/Renta-de-destapacaños-home-depot.html">Renta de destapacaños home depot </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-viejas.html">Remedios caseros para destapar cañerias viejas </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-A-Domicilio.html">Destapaciones A Domicilio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Remedio-casero-para-destapar-tuberias.html">Remedio casero para destapar tuberias </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-mas-potente.html">Destapacaños mas potente </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-Cañeria-Del-Baño.html">Destapar Cañeria Del Baño </a> 
+       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapador-de-baño-liquido-walmart.html">Destapador de baño liquido walmart </a> 
+       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
+       <a href="../Destapa-Cañerias/Destapacaños-truper-home-depot.html">Destapacaños truper home depot </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-zona-sur.html">Destapaciones de cloacas zona sur </a> 
+       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-cañerias-con-bicarbonato-de-sodio.html">Destapar cañerias con bicarbonato de sodio </a> 
+       <a href="../Destapa-Cañerias/Destapaciones.html">Destapaciones </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-desague-de-cocina.html">Destapar desague de cocina </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
+       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
